exercises/mixnmatch/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: app-pod
  name: app-pod
  namespace: multi-test
spec:
  containers:
  - image: nginx:1.25
    name: app
  - name: log-shipper
    image: busybox
    command: ["sh", "-c", "while true; do echo logging; sleep 5; done"]
