exercises/mixnmatch/high-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: high-pod
  name: high-pod
  namespace: priority-test
spec:
  priorityClassName: high-priority
  containers:
  - image: nginx:1.25
    name: high-pod
