exercises/mixnmatch/mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        volumeMounts:
        - mountPath: /data
          name: mypd
      volumes:
      - name: mypd
        persistentVolumeClaim:
          claimName: mariadb-pvc
