exercises/mixnmatch/scheduling-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ssd-pod
  name: ssd-pod
  namespace: scheduling-test
spec:
  nodeSelector:
    disktype: ssd
  containers:
  - image: nginx:1.25
    name: ssd-pod
  tolerations:
  - key: "env"
    operator: "Equal"
    value: "prod"
    effect: "NoSchedule"
