exercises/mixnmatch/zone-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"zone-app","namespace":"affinity-test"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"zone-app"}},"template":{"metadata":{"labels":{"app":"zone-app"}},"spec":{"containers":[{"image":"nginx:1.25","name":"app"}]}}}}
  creationTimestamp: "2026-04-04T18:40:12Z"
  generation: 1
  name: zone-app
  namespace: affinity-test
  resourceVersion: "2730460"
  uid: 026dd7df-766d-4ab5-a636-2f40053badf8
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zone-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zone-app
    spec:
      containers:
      - image: nginx:1.25
        imagePullPolicy: IfNotPresent
        name: app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2026-04-04T18:40:13Z"
    lastUpdateTime: "2026-04-04T18:40:13Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-04T18:40:12Z"
    lastUpdateTime: "2026-04-04T18:40:13Z"
    message: ReplicaSet "zone-app-7f787f68f8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
