exercises/mixnmatch/netpol-default-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: app-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
